--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,7 +39,7 @@ jobs:
     needs: install
     env:
       NEXT_PUBLIC_API_BASE_URL: ${{vars.NEXT_PUBLIC_API_BASE_URL}}
-
+  
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
@@ -48,6 +48,8 @@ jobs:
           cache: "npm"
       - run: npm ci
       - run: npm run build
+      - name: List directory contents after build
+        run: ls -la
       - name: Archive production artifacts
         uses: actions/upload-artifact@v3
         with:
