--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,6 +34,26 @@ jobs:
       - run: npm run prettier
       - run: npm run check:types
 
+  # build:
+  #   runs-on: ubuntu-latest
+  #   needs: install
+  #   env:
+  #     NEXT_PUBLIC_API_BASE_URL: ${{vars.NEXT_PUBLIC_API_BASE_URL}}
+
+  #   steps:
+  #     - uses: actions/checkout@v3
+  #     - uses: actions/setup-node@v3
+  #       with:
+  #         node-version: "18"
+  #         cache: "npm"
+  #     - run: npm ci
+  #     - run: npm run build
+  #     - name: Archive production artifacts
+  #       uses: actions/upload-artifact@v3
+  #       with:
+  #         name: nextjs-build
+  #         path: .next/
+
   build:
     runs-on: ubuntu-latest
     needs: install
@@ -48,6 +68,10 @@ jobs:
           cache: "npm"
       - run: npm ci
       - run: npm run build
+      - name: List contents of working directory
+        run: ls -la  # Lists all files in the working directory
+      - name: List contents of .next directory
+        run: ls -la .next  # Lists all files in the .next directory
       - name: Archive production artifacts
         uses: actions/upload-artifact@v3
         with:
