--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,3 +1,106 @@
+# name: CI
+
+# on:
+#   push:
+#     branches: [main]
+#   pull_request:
+#     branches: [main]
+
+# jobs:
+#   install:
+#     runs-on: ubuntu-latest
+
+#     steps:
+#       - uses: actions/checkout@v3
+#       - uses: actions/setup-node@v3
+#         with:
+#           node-version: "18"
+#           cache: "npm"
+#       - run: npm ci
+
+#   lint:
+#     runs-on: ubuntu-latest
+#     needs: install
+
+#     steps:
+#       - uses: actions/checkout@v3
+#       - uses: actions/setup-node@v3
+#         with:
+#           node-version: "18"
+#           cache: "npm"
+#       - run: npm ci
+#       - run: npm run lint:code
+#       - run: npm run lint:styles
+#       - run: npm run prettier
+#       - run: npm run check:types
+
+#   # build:
+#   #   runs-on: ubuntu-latest
+#   #   needs: install
+#   #   env:
+#   #     NEXT_PUBLIC_API_BASE_URL: ${{vars.NEXT_PUBLIC_API_BASE_URL}}
+
+#   #   steps:
+#   #     - uses: actions/checkout@v3
+#   #     - uses: actions/setup-node@v3
+#   #       with:
+#   #         node-version: "18"
+#   #         cache: "npm"
+#   #     - run: npm ci
+#   #     - run: npm run build
+#   #     - name: Archive production artifacts
+#   #       uses: actions/upload-artifact@v3
+#   #       with:
+#   #         name: nextjs-build
+#   #         path: .next/
+
+#   build:
+#     runs-on: ubuntu-latest
+#     needs: install
+#     env:
+#       NEXT_PUBLIC_API_BASE_URL: ${{vars.NEXT_PUBLIC_API_BASE_URL}}
+  
+#     steps:
+#       - uses: actions/checkout@v3
+#       - uses: actions/setup-node@v3
+#         with:
+#           node-version: "18"
+#           cache: "npm"
+#       - run: npm ci
+#       - run: npm run build
+#       - name: List directory contents after build
+#         run: ls -la
+#       - name: List contents of working directory
+#         run: ls -la  # Lists all files in the working directory
+#       - name: List contents of .next directory
+#         run: ls -la .next  # Lists all files in the .next directory
+#       - name: Archive production artifacts
+#         uses: actions/upload-artifact@v3
+#         with:
+#           name: nextjs-build
+#           path: .next/
+
+#   e2e:
+#     runs-on: ubuntu-latest
+#     needs: build
+
+#     steps:
+#       - uses: actions/checkout@v3
+#       - uses: actions/setup-node@v3
+#         with:
+#           node-version: "18"
+#           cache: "npm"
+#       - run: npm ci
+#       - name: Download build artifacts
+#         uses: actions/download-artifact@v3
+#         with:
+#           name: nextjs-build
+#           path: .next/
+#       - name: Cypress run
+#         uses: cypress-io/github-action@v4
+#         with:
+#           start: npm start
+
 name: CI
 
 on:
@@ -34,32 +137,12 @@ jobs:
       - run: npm run prettier
       - run: npm run check:types
 
-  # build:
-  #   runs-on: ubuntu-latest
-  #   needs: install
-  #   env:
-  #     NEXT_PUBLIC_API_BASE_URL: ${{vars.NEXT_PUBLIC_API_BASE_URL}}
-
-  #   steps:
-  #     - uses: actions/checkout@v3
-  #     - uses: actions/setup-node@v3
-  #       with:
-  #         node-version: "18"
-  #         cache: "npm"
-  #     - run: npm ci
-  #     - run: npm run build
-  #     - name: Archive production artifacts
-  #       uses: actions/upload-artifact@v3
-  #       with:
-  #         name: nextjs-build
-  #         path: .next/
-
   build:
     runs-on: ubuntu-latest
     needs: install
     env:
       NEXT_PUBLIC_API_BASE_URL: ${{vars.NEXT_PUBLIC_API_BASE_URL}}
-  
+
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
@@ -68,17 +151,14 @@ jobs:
           cache: "npm"
       - run: npm ci
       - run: npm run build
-      - name: List directory contents after build
-        run: ls -la
-      - name: List contents of working directory
-        run: ls -la  # Lists all files in the working directory
-      - name: List contents of .next directory
-        run: ls -la .next  # Lists all files in the .next directory
+      - name: List contents of .next directory after build
+        run: ls -la .next  # Lists all files in the .next directory after build
       - name: Archive production artifacts
         uses: actions/upload-artifact@v3
         with:
           name: nextjs-build
           path: .next/
+          if-no-files-found: warn  # This ensures the job doesn't fail if .next/ is missing
 
   e2e:
     runs-on: ubuntu-latest
