--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -140,6 +140,9 @@ jobs:
   build:
     runs-on: ubuntu-latest
     needs: install
+    defaults:
+      run:
+        working-directory: .  # Ensure the working directory is set to the root
     env:
       NEXT_PUBLIC_API_BASE_URL: ${{vars.NEXT_PUBLIC_API_BASE_URL}}
 
@@ -154,12 +157,13 @@ jobs:
       - name: List contents of .next directory after build
         run: ls -la .next  # List contents of .next directory
 
-      # Archive the entire .next directory
+      # Archive the .next folder using an explicit path
       - name: Archive production artifacts
         uses: actions/upload-artifact@v3
         with:
           name: nextjs-build
-          path: .next/
+          path: ./.next  # Explicitly specify the relative path from the working directory
+        working-directory: .  # Ensures it's looking in the root
 
   e2e:
     runs-on: ubuntu-latest
@@ -176,7 +180,7 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: nextjs-build
-          path: .next/
+          path: ./.next  # Ensure you point to the correct path
       - name: Cypress run
         uses: cypress-io/github-action@v4
         with:
