--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -140,9 +140,6 @@ jobs:
   build:
     runs-on: ubuntu-latest
     needs: install
-    defaults:
-      run:
-        working-directory: .  # Ensure the working directory is set to the root
     env:
       NEXT_PUBLIC_API_BASE_URL: ${{vars.NEXT_PUBLIC_API_BASE_URL}}
 
@@ -154,6 +151,7 @@ jobs:
           cache: "npm"
       - run: npm ci
       - run: npm run build
+
       - name: List contents of .next directory after build
         run: ls -la .next  # List contents of .next directory
 
@@ -162,8 +160,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: nextjs-build
-          path: ./.next  # Explicitly specify the relative path from the working directory
-        working-directory: .  # Ensures it's looking in the root
+          path: .next/
 
   e2e:
     runs-on: ubuntu-latest
@@ -180,7 +177,7 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: nextjs-build
-          path: ./.next  # Ensure you point to the correct path
+          path: .next/
       - name: Cypress run
         uses: cypress-io/github-action@v4
         with:
