--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -141,7 +141,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: install
     env:
-      NEXT_PUBLIC_API_BASE_URL: ${{vars.NEXT_PUBLIC_API_BASE_URL}}
+      NEXT_PUBLIC_API_BASE_URL: ${{ vars.NEXT_PUBLIC_API_BASE_URL }}
 
     steps:
       - uses: actions/checkout@v3
@@ -152,15 +152,16 @@ jobs:
       - run: npm ci
       - run: npm run build
 
-      - name: List contents of .next directory after build
-        run: ls -la .next  # List contents of .next directory
+      # Check if .next directory is created after the build
+      - name: Check .next directory
+        run: ls -la .next
 
-      # Archive the .next folder using an explicit path
+      # Archive the .next folder using an absolute path
       - name: Archive production artifacts
         uses: actions/upload-artifact@v3
         with:
           name: nextjs-build
-          path: .next/
+          path: ${{ github.workspace }}/.next/
 
   e2e:
     runs-on: ubuntu-latest
@@ -173,11 +174,14 @@ jobs:
           node-version: "18"
           cache: "npm"
       - run: npm ci
+
+      # Download build artifacts using the absolute path
       - name: Download build artifacts
         uses: actions/download-artifact@v3
         with:
           name: nextjs-build
-          path: .next/
+          path: ${{ github.workspace }}/.next/
+
       - name: Cypress run
         uses: cypress-io/github-action@v4
         with:
