--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -106,6 +106,8 @@ name: CI
 on:
   push:
     branches: [main]
+  pull_request:
+    branches: [main]
 
 jobs:
   install:
@@ -139,8 +141,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: install
     env:
-      NEXT_PUBLIC_API_BASE_URL: ${{ vars.NEXT_PUBLIC_API_BASE_URL }}
-
+      NEXT_PUBLIC_API_BASE_URL: ${{vars.NEXT_PUBLIC_API_BASE_URL}}
+  
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
@@ -152,19 +154,13 @@ jobs:
       - name: List directory contents after build
         run: ls -la
       - name: List contents of .next directory
-        run: ls -la ${{ github.workspace }}/.next  # Use absolute path to list contents
-      - name: Confirm .next directory presence
-        run: |
-          if [ -d "${{ github.workspace }}/.next" ]; then
-            echo ".next exists."
-          else
-            echo ".next does not exist."
-          fi
+        run: ls -la .next  # Lists all files in the .next directory
       - name: Archive production artifacts
         uses: actions/upload-artifact@v3
         with:
           name: nextjs-build
-          path: ${{ github.workspace }}/.next/  # Upload the absolute path
+          path: .next/  # Use relative path
+          if-no-files-found: warn
 
   e2e:
     runs-on: ubuntu-latest
@@ -181,7 +177,7 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: nextjs-build
-          path: ${{ github.workspace }}/.next/
+          path: .next/
       - name: Cypress run
         uses: cypress-io/github-action@v4
         with:
