changing main.yml

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -112,7 +112,6 @@ on:
 jobs:
   install:
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
@@ -124,7 +123,6 @@ jobs:
   lint:
     runs-on: ubuntu-latest
     needs: install
-
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
@@ -142,7 +140,6 @@ jobs:
     needs: install
     env:
       NEXT_PUBLIC_API_BASE_URL: ${{vars.NEXT_PUBLIC_API_BASE_URL}}
-  
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
@@ -153,19 +150,17 @@ jobs:
       - run: npm run build
       - name: List directory contents after build
         run: ls -la
-      - name: List contents of .next directory
-        run: ls -la .next  # Lists all files in the .next directory
+      - name: Move .next directory
+        run: mv .next build_artifacts
       - name: Archive production artifacts
         uses: actions/upload-artifact@v3
         with:
           name: nextjs-build
-          path: .next/  # Use relative path
-          if-no-files-found: warn
+          path: build_artifacts/
 
   e2e:
     runs-on: ubuntu-latest
     needs: build
-
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
@@ -177,7 +172,7 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: nextjs-build
-          path: .next/
+          path: build_artifacts/
       - name: Cypress run
         uses: cypress-io/github-action@v4
         with:
