--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -112,6 +112,7 @@ on:
 jobs:
   install:
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
@@ -123,6 +124,7 @@ jobs:
   lint:
     runs-on: ubuntu-latest
     needs: install
+
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
@@ -140,6 +142,7 @@ jobs:
     needs: install
     env:
       NEXT_PUBLIC_API_BASE_URL: ${{vars.NEXT_PUBLIC_API_BASE_URL}}
+
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
@@ -150,17 +153,18 @@ jobs:
       - run: npm run build
       - name: List directory contents after build
         run: ls -la
-      - name: Move .next directory
-        run: mv .next build_artifacts
+      - name: List contents of .next directory
+        run: ls -la .next  # Lists all files in the .next directory
       - name: Archive production artifacts
         uses: actions/upload-artifact@v3
         with:
           name: nextjs-build
-          path: build_artifacts/
+          path: .next/
 
   e2e:
     runs-on: ubuntu-latest
     needs: build
+
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
@@ -168,11 +172,11 @@ jobs:
           node-version: "18"
           cache: "npm"
       - run: npm ci
-      - name: Download build artifacts
-        uses: actions/download-artifact@v3
-        with:
-          name: nextjs-build
-          path: build_artifacts/
+      
+      # New step to build Next.js before starting Cypress
+      - name: Build Next.js App
+        run: npm run build
+      
       - name: Cypress run
         uses: cypress-io/github-action@v4
         with:
