--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -141,7 +141,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: install
     env:
-      NEXT_PUBLIC_API_BASE_URL: ${{vars.NEXT_PUBLIC_API_BASE_URL}}
+      NEXT_PUBLIC_API_BASE_URL: ${{ secrets.NEXT_PUBLIC_API_BASE_URL }}  # Use GitHub Secrets for environment variable
 
     steps:
       - uses: actions/checkout@v3
@@ -164,6 +164,8 @@ jobs:
   e2e:
     runs-on: ubuntu-latest
     needs: build
+    env:
+      NEXT_PUBLIC_API_BASE_URL: ${{ secrets.NEXT_PUBLIC_API_BASE_URL }}  # Use the same secret here
 
     steps:
       - uses: actions/checkout@v3
@@ -173,7 +175,7 @@ jobs:
           cache: "npm"
       - run: npm ci
       
-      # New step to build Next.js before starting Cypress
+      # Ensure a build before running Cypress
       - name: Build Next.js App
         run: npm run build
       
