--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "node": ">=16.0.0"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
     "@fontsource/inter": "^5.0.18",
+    "@mui/material": "^6.1.1",
     "@tanstack/react-query": "^4.32.6",
     "@tanstack/react-query-devtools": "^4.32.6",
     "axios": "^1.4.0",
