Deploy app to vercel (#21)
* added a barebones input component as well as the index file, also added the index file for select.

* added vercel to my ci-cd workflow

* added vercel to my ci-cd workflow

* added vercel to my ci-cd workflow

* added vercel to my ci-cd workflow

* added vercel to my ci-cd workflow and fixed style issues

---------

Co-authored-by: Alex Gopal <alexgopal2@gmail.com>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -103,6 +103,9 @@
 
 name: CI
 
+env:
+  NEXT_PUBLIC_API_BASE_URL: ${{ secrets.NEXT_PUBLIC_API_BASE_URL }} # New environment variable
+
 on:
   push:
     branches: [main]
