--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@fontsource/inter": "^5.0.18",
+    "@mui/icons-material": "^6.1.7",
     "@mui/material": "^6.1.1",
     "@tanstack/react-query": "^4.32.6",
     "@tanstack/react-query-devtools": "^4.32.6",
@@ -60,7 +61,7 @@
     "husky": "^8.0.3",
     "jest": "^29.6.2",
     "jest-environment-jsdom": "^29.6.2",
-    "lint-staged": "^14.0.0",
+    "lint-staged": "^15.2.10",
     "prettier": "^3.0.2",
     "sass": "^1.66.0",
     "storybook": "^8.1.7",
