--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "next": "^14.2.4",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
+    "react-aria-components": "^1.5.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
